# ai-compliance-nlweb

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
data/: mock_chunks.yaml
docs/adr/: 0000-template.md  0001-local-first-dual-runtime-profile.md  0003-embedding-model-per-store.md  0008-no-paywalled-content.md  0009-answer-model-per-profile.md  0010-multi-turn-condensation.md  0012-rag-only-scope.md  0014-corpus-currency-provenance.md  0015-nlweb-contract.md  0016-fastapi-over-express.md  0017-security-model.md
docs/poc/: 00-overview.md  01-architecture.md  05-retrieval-and-ranking.md  08-data-model.md  09-api-reference.md  10-diagrams.md  12-local-runtime.md  16-responsible-use.md  19-nlweb-ask-endpoint.md  20-mcp-server.md  21-security.md  STATUS.md
eval/: golden_qa.yaml  run_eval.py
infra/bicep/: README.md  deploy.sh  main.bicep  main.json
infra/compose/: .env.example  Dockerfile.api  Dockerfile.bootstrap  README.md  bootstrap.py  docker-compose.yml
manifest/: corpus.yaml
manifest/summaries/: iso-38507-2022.md  iso-42001-2023.md
scripts/: fetch_corpus.py  ingest.py
scripts/aisearch/: compliance-chunks-index.json  compliance-docs-index.json
site/: index.html
sources/: _index.json
sources/open/: brazil-pl-2338.md  california-ab-2013.md  california-cppa-admt.md  california-sb-53.md  canada-aida.md  china-genai-measures-2023.md  coe-framework-convention-ai-2024.md  colorado-ai-act-sb24-205.md  csa-ai-guidance.md  enisa-ai-cybersecurity.md  (+18 more)
tests/: conftest.py
(+47 files in other folders)
