[project]
name = "ai-compliance-nlweb"
version = "0.1.0"
description = "A conversational compliance workbench — NLWeb /ask + /mcp over a curated AI-compliance corpus."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
